# dialproof

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
dialproof/: __init__.py  auditor.py  checks.py  cli.py  gate.py  models.py  parser.py  receipts.py  report.py
examples/: audit_example.py  call_acme_clean.json  call_ridgeline_demo.json  call_sunrise_dental.txt
tests/: conftest.py  test_auditor.py  test_checks.py  test_cli.py  test_gate.py  test_parser.py  test_receipts.py  test_report.py
